--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "description": "",
   "main": "app.js",
   "dependencies": {
+    "body-parser": "^1.18.3",
     "ejs": "^2.6.1",
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "sequelize": "^4.38.0",
+    "sequelize-transforms": "^2.0.0",
+    "tedious": "^2.6.1"
   },
   "devDependencies": {},
   "scripts": {
